Fixed overflowing of children elements inside the carouse-button element

--- a/style.css
+++ b/style.css
@@ -430,6 +430,7 @@ input[type="file"] {
   flex-direction: column;
   align-items: center;
   border-radius: 12px;
+  overflow: hidden;
 }
 
 .carousel-button-label{
